# kdd2022-tutorial

./: README.md  pyproject.toml
examples/: README.md  classification-data.ipynb  real-bandit-data.ipynb  synthetic.ipynb
real-world/: demo.ipynb
simulations/: README.md  dataset.py  evaluation-of-ope-1.ipynb  evaluation-of-ope-2.ipynb  hyperparameter-tuning-1.ipynb  hyperparameter-tuning-2.ipynb  weight.ipynb
